Child process example 1

--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "1.0.0",
   "description": "Builder for dictionary",
   "main": "index.js",
-  "dependencies": {
-  },
   "devDependencies": {
+    "@types/node": "^17.0.33",
     "casual": "^1.6.2"
   },
   "scripts": {
